<resources>
    <string name="app_name">Home</string>
    <string name="bewegingssensor" translatable="false">Bewegingssensor</string>
    <string name="automatisch_alarm">Automatic alarm</string>
    <string name="survur_settings">Survur settings</string>
    <string name="lamp_3" translatable="false">Lamp 3</string>
    <string name="lamp_2" translatable="false">Lamp 2</string>
    <string name="lamp_1" translatable="false">Lamp 1</string>
    <string name="ComputerAan">Computer on</string>
    <string name="ComputerUit">Computer off</string>
    <string name="connected">Connected to survur</string>
    <string name="disconnected" translatable="false">Disconnected, reconnecting...</string>
    <string name="inside">Inside:</string>
    <string name="outside">Outside:</string>
    <string name="food">Food:</string>
    <string name="settings">Settings</string>
    <string name="wol">Wol</string>
    <string name="feed_fish">Feed fish</string>
    <string name="refill">Refill</string>
</resources>
